Update readme for JDK9, modify travis config, increase timeouts for IT.